Add a p2p test that checks that the node doesn't crash when it receives a large p2p message